--- a/PoCLayer1/PoCLayer1/PoCLayer1.csproj
+++ b/PoCLayer1/PoCLayer1/PoCLayer1.csproj
@@ -6,4 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Remove="Pages\EditUser.razor.css" />
+    </ItemGroup>
+
 </Project>
